--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website ikram </title>
     <p>
-        ikram
+        ikram bonjour bonsoir
     </p>
     <link rel="stylesheet" href="styles.css">
 </head>
